Styling changes; trying to fix hover card positioning on mobile

--- a/upcoming-sales-website/src/assets/AdvancedItemCard.module.css
+++ b/upcoming-sales-website/src/assets/AdvancedItemCard.module.css
@@ -17,8 +17,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: calc(18.308vw / 2);
-    height: calc(24vw / 2);
+    width: calc(238px * .75);
+    height: calc(312px * .75);
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
