--- a/upcoming-sales-website/src/assets/AdvancedItemCardHover.module.css
+++ b/upcoming-sales-website/src/assets/AdvancedItemCardHover.module.css
@@ -8,6 +8,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     pointer-events: none;
     max-width: 25%;
+    min-width: 25%;
     font-family: 'maplestory', sans-serif;
     font-weight: lighter;
     color: #eee;
@@ -31,8 +32,8 @@
 }
 
 .itemImage {
-    width: 2cqw;
-    height: 2cqw;
+    width: 4cqb;
+    height: 4cqb;
     margin-right: 10px;
 }
 
@@ -50,4 +51,22 @@
     border: none;
     border-top: 1px solid #ccc;
     margin: 10px 0;
+}
+
+@media (max-width: 768px) {
+    .hoverCard {
+        position: absolute;
+        z-index: 1000;
+        background-color: rgba(0, 0, 0, 0.75);
+        border: 1px solid #eeeeee;
+        border-radius: 8px;
+        padding: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        pointer-events: none;
+        max-width: 45%;
+        font-family: 'maplestory', sans-serif;
+        font-weight: lighter;
+        color: #eee;
+        overflow-y: auto;
+    }
 }
